Get to add-element code

--- a/resource/pages/welcome.html
+++ b/resource/pages/welcome.html
@@ -62,7 +62,7 @@
             weeks to write an internet (web) browser. I am one person, a hobbyist, 15. 
             PM me at <a href="http://computercraft.info/forums2">the CC forums</a>.</p>
             <div class="header">Just looking under the hood?</div><br/>
-            <p>The <a href="">source-code</a> is available online.</p><br/><br/>
+            <p>The <a href="https://github.com/JasonTheKitten/Webicity-DEV">source-code</a> is available online.</p><br/><br/>
         </div>
     </body>
 </html>
