--- a/resource/pages/snr.html
+++ b/resource/pages/snr.html
@@ -7,6 +7,6 @@
         <div id="webicity"></div>
         Site not reached<br>
         The site that you were attempting to access could not be reached.<br>
-        That's all we know!
+        We know no more...
     </body>
 </html>
