--- a/resource/pages/welcome.html
+++ b/resource/pages/welcome.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <title>Welcome!</title>
-        <script src="scripts/webicity.js"></script>
+        <script src="scripts/logo.js"></script>
+		<script src="scripts/binfo.js"></script>
         <link rel="stylesheet" type="text/css" src="styles/welcomepage.css"/>
         </style>
     </head>
     <body id = "body">
         <div id="header">
             <center>Welcome to</center>
-            <center id="webicity">Webicity!</center>
+            <center id="browserl"><rec class="bname"/>!</center>
             <script>
-                /*global webicity*/ //Make my editor not-so-annoying
-                webicity.colorizeName("webicity");
+                logo.colorizeName("browserl");
             </script>
         </div>
         <div id="showcontent">
@@ -37,32 +37,35 @@
         <div id="content">
             <div id="welcome">Welcome!</div><br/>
             <p>We are so glad to have you here!</p><br/><br/>
-            <div class="header">What is Webicity?</div><br/>
-            <p>Webicity is a HTML-based web browser for the ComputerCraft mod</p><br/><br/>
+            <div class="header">What is <rec class="bname"/>?</div><br/>
+            <p><rec class="bname"/> is a HTML-based web browser for the ComputerCraft mod</p><br/><br/>
             <div class="header">Why does it matter?</div><br/>
             <p>Previously CC-based web, internet, and rednet browsers would use their own markup languages.
             This means that you could only go to specific sites, and other sites would not work.
-            Webicity is an easy-to-use web & filesystem browser with primary support for HTML,
+            <rec class="bname"/> is an easy-to-use web & filesystem browser with primary support for HTML,
             meaning you can browse billions of pages and download millions of files - unrestricted</p><br/><br/>
             <div class="header">Get Ready!</div><br/>
-            <p>You have alread downloaded Webicity!</p><br/>
+            <p>You have alread downloaded <rec class="bname"/>!</p><br/>
             <div class="header">Get Set!</div><br/>
-            <p>Webicity is configurable. 
-            Either click this <a href="webicity://settings">link</a>, 
+            <p><rec class="bname"/> is configurable. 
+            Either click this <a href="browser://settings">link</a>, 
             or choose settings "configure" from the menu.
-            You can also <a href="webicity://experiments">enable features</a> that will be introduced soon</p><br/>
+            You can also <a href="browser://experiments">enable features</a> that will be introduced soon</p><br/>
             <div class="header">Go</div><br/>
-            <p>What are you waiting for? Open a <a href="webicity://newtab" target="">new tab</a> and get browsing!</p><br/><br/>
+            <p>What are you waiting for? Open a <a href="browser://opentab">new tab</a> and get browsing!</p><br/><br/>
             <div class="header">Need help?</div><br/>
-            <p><a href="webicity://newtab" target="">Get Help</a></p><br/><br/>
+            <p><a href="newtab" target="">Get Help</a></p><br/><br/>
             <div class="header">Feelling insecure?</div><br/>
-            <p><a onclick="webicity.openWindow('webicity://incog', true)">Go incog</a></p><br/><br/>
+            <p><a onclick="browser.openTab('browser://incog', true)">Go incog</a></p><br/><br/>
             <div class="header">Contributing</div><br/>
-            <p>There was once a team of 48 full-grown professionals. It took them
-            weeks to write an internet (web) browser. I am one person, a hobbyist, 15. 
-            PM me at <a href="http://computercraft.info/forums2">the CC forums</a>.</p>
+            <p>
+				It takes a lot of people and a lot of time to write an internet (web) browser. 
+				If you are interested in contributing, 
+				PM me at <a href="https://computercraft.info/forums2">the CC forums</a> or 
+				<a href="https://wiki.computercraft.cc/">the other CC forums</a>.
+			</p>
             <div class="header">Just looking under the hood?</div><br/>
-            <p>The <a href="https://github.com/JasonTheKitten/Webicity-DEV">source-code</a> is available online.</p><br/><br/>
+            <p>The <rec class="src"/> source-code</a> is available online.</p><br/><br/>
         </div>
     </body>
 </html>
