Working support for offline text files

--- a/resources/pages/newtab.html
+++ b/resources/pages/newtab.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Settings</title>
+        <title>&{strings.pages.incogtab.name}</title>
     </head>
     <body>
     
